k8s/04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitwise-backend
  namespace: splitwise
  labels:
    app: splitwise-backend
spec:
  replicas: 1
  strategy:
    type: Recreate # Required for EBS ReadWriteOnce PVC to detach from old pod and attach to new pod during updates
  selector:
    matchLabels:
      app: splitwise-backend
  template:
    metadata:
      labels:
        app: splitwise-backend
    spec:
      containers:
        - name: backend
          # Replace 'devopshome' with your Docker Hub registry or ECR URI
          image: ajaykumara/splitwise-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: uploads-volume
              mountPath: /app/uploads
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
      volumes:
        - name: uploads-volume
          persistentVolumeClaim:
            claimName: splitwise-backend-pvc
