k8s/07-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splitwise-frontend
  namespace: splitwise
  labels:
    app: splitwise-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: splitwise-frontend
